--- a/branches/mcxtrace_1_0/kernelcalls.tex
+++ b/branches/mcxtrace_1_0/kernelcalls.tex
@@ -6,18 +6,18 @@
 \index{Library!Shared|see{Library/Components/share}}
 \index{Library!mcstas-r|see{Library/Run-time}}
 
-The \MCS\ Library contains a number of built-in functions
+The \MCX\ Library contains a number of built-in functions
 and conversion constants which are useful when constructing
 components. These are stored in the \verb+share+ directory of
-the \verb+MCSTAS+ library. \index{Library!Components!share}
-\index{Environment variable!MCSTAS}
+the \verb+MCXTRACE+ library. \index{Library!Components!share}
+\index{Environment variable!MCXTRACE}
 
 Within these functions, the 'Run-time' part is available for all
 component/instrument descriptions. The other parts
 % (see table~\ref{t:comp-share})
 are dynamic, that is they are not
 pre-loaded, but only imported once when a component requests it
-using the \verb+%include+ \MCS\ keyword. For instance, within a
+using the \verb+%include+ \MCX\ keyword. For instance, within a
 component C code block, (usually SHARE or DECLARE):
 \index{Keyword!\%include}
 \begin{verbatim}
@@ -48,39 +48,38 @@ which may ease the task of writing component and instrument definitions.
 \index{Library!Run-time!SCATTER}
 \index{Library!Run-time!ABSORB}
 \index{Library!Run-time!PROP\_Z0}
-\index{Library!Run-time!PROP\_DT}
-\index{Library!Run-time!PROP\_GRAV\_DT}
+\index{Library!run-time!PROP\_X0}
+\index{Library!run-time!PROP\_Y0}
+\index{Library!Run-time!PROP\_DL}
 \index{Library!Run-time!ALLOW\_BACKPROP}
-Propagation routines perform all necessary operations to transport neutron rays
+Propagation routines perform all necessary operations to transport x-rays
 from one point to an other. Except when using the special
 \verb+ALLOW_BACKPROP;+ call prior to exectuting any \verb+PROP_*+ propagation,
-the neutron rays which have negative propagation times are removed automatically.
+the x-rays which have negative propagation times are removed automatically.
 \begin{itemize}
 \item {\bf ABSORB}. This macro issues an order to the overall
-  \MCS\ simulator to interrupt the simulation of the current neutron
+  \MCX\ simulator to interrupt the simulation of the current x-ray
   history and to start a new one.
-\item {\bf PROP\_Z0}. Propagates the neutron to the $z=0$ plane,
+\item {\bf PROP\_Z0}. Propagates the x-ray to the $z=0$ plane,
   by adjusting $(x,y,z)$ and $t$ accordingly from knowledge of the
-  neutron velocity $(vx,vy,vz)$.
-  If the propagation time is negative, the neutron ray is absorbed, except if a \verb+ALLOW_BACKPROP;+ preceeds it.
+  x-ray wavevector $(k_x,k_y,k_z)$.
+  If the propagation time is negative, the x-ray is absorbed, except if a \verb+ALLOW_BACKPROP;+ preceeds it.
 
   For components that are centered along the $z$-axis,
   use the \verb+_intersect+ functions to determine intersection time(s),
-  and then a \verb+PROP_DT+ call.
-\item {\bf PROP\_DT}$(dt)$. Propagates the neutron through the
-  time interval $dt$, adjusting $(x,y,z)$ and $t$ accordingly
-  from knowledge of the neutron velocity. This macro automatically calls PROP\_GRAV\_DT when the \verb+--gravitation+ option has been set for the whole simulation.
-\item {\bf PROP\_GRAV\_DT}$(dt,Ax,Ay,Az)$. Like {\bf PROP\_DT}, but it also
-  includes gravity using the acceleration $(Ax,Ay,Az)$. In addition
-  to adjusting $(x,y,z)$ and $t$, also $(vx,vy,vz)$ is modified.
+  and then a \verb+PROP_DL+ call.
+\item {\bf PROP\_X0,PROP\_Y0}. These macros are analogous to \verb+PROP_Z0+ except they propaget to the $x=0$ and $y=0$ planes respectively.
+
+\item {\bf PROP\_DL}$(dl)$. Propagates the x-ray by the length $dl$, adjusting $(x,y,z)$ and $\phi$ accordingly,
+  from knowledge of the x-ray wavevector.
 \item {\bf ALLOW\_BACKPROP}. Indicates that the next propagation routine
-  will not remove the neutron ray, even if negative propagation times
-  are found. Further propagations are not affected.\index{Removed neutron events}
+  will not remove the x-ray, even if negative propagation lengths
+  are found. Further propagations are not affected.\index{Removed x-ray events}
 \item {\bf SCATTER}. This macro is used to denote a scattering event
   inside a component.
 %, see section~\ref{s:comp-trace}.
   It should be used e.g
-  to indicate that a component has interacted with the neutron ray
+  to indicate that a component has interacted with the x-ray
   (e.g. scattered or detected).
   This does not affect the simulation (see, however, {\bf Beamstop}),
   and it is mainly used by the
@@ -144,32 +143,32 @@ the neutron rays which have negative propagation times are removed automatically
   POS\_A\_COMP\_INDEX$(index).i$ where $i$ is $x$, $y$ or $z$.
 \item {\bf POS\_R\_COMP\_INDEX} works the same as above,
   but with relative coordinates.
-\item {\bf STORE\_NEUTRON}$(index, x, y, z, vx, vy, vz, t$, $sx, sy,
-sz, p)$ stores the current neutron state in the trace-history table,
+\item {\bf STORE\_XRAY}$(index, x, y, z, kx, ky, kz, phi$, $Ex, Ey,
+Ez, p)$ stores the current x-ray state in the trace-history table,
 in local coordinate system. $index$ is usually INDEX\_CURRENT\_COMP.
 This is automatically done when entering each component of an
 instrument.
-\item {\bf RESTORE\_NEUTRON}$(index, x, y, z, vx, vy, vz, t, sx, sy,
-sz, p)$ restores the neutron state to the one at the input of the
+\item {\bf RESTORE\_XRAY}$(index, x, y, z, kx, ky, kz, phi, Ex, Ey,
+Ez, p)$ restores the x-ray state to the one at the input of the
 component $index$. To ignore a component effect, use
-RESTORE\_NEUTRON (INDEX\_CURRENT\_COMP, \\
-$x, y, z, vx, vy, vz, t,
-sx, sy, sz, p$) at the end of its TRACE section, or in its EXTEND
-section. These neutron states are in the local component coordinate
+RESTORE\_XRAY (INDEX\_CURRENT\_COMP, \\
+$x, y, z, kx, ky, kz, phi,
+Ex, Ey, Ez, p$) at the end of its TRACE section, or in its EXTEND
+section. These x-ray states are in the local component coordinate
 systems.
 \item {\bf SCATTERED} is a variable set to 0 when entering
   a component, which is incremented each time a SCATTER event occurs.
   This may be used in the \verb+EXTEND+ sections to determine whether
-  the component interacted with the current neutron ray.
+  the component interacted with the current x-ray.
 \item {\bf extend\_list}($n$, \&\textit{arr}, \&\textit{len},
   \textit{elemsize}). Given an array \textit{arr} with \textit{len}
   elements each of size \textit{elemsize}, make sure that the array is
   big enough to hold at least $n$ elements, by extending \textit{arr}
   and \textit{len} if necessary. Typically used when reading a list of
   numbers from a data file when the length of the file is not known in advance.
-\item {\bf mcset\_ncount}$(n)$. Sets the number of neutron histories to simulate to $n$.
-\item {\bf mcget\_ncount}(). Returns the number of neutron histories to simulate (usually set by option \verb+-n+).
-\item {\bf mcget\_run\_num}(). Returns the number of neutron histories that have been simulated until now.
+\item {\bf mcset\_ncount}$(n)$. Sets the number of x-ray histories to simulate to $n$.
+\item {\bf mcget\_ncount}(). Returns the number of x-ray histories to simulate (usually set by option \verb+-n+).
+\item {\bf mcget\_run\_num}(). Returns the number of x-ray histories that have been simulated until now.
 \end{itemize}
 
 \subsection{Coordinate transformations}
@@ -210,12 +209,12 @@ resulting Coord structure.
 \end{itemize}
 
 \subsection{Output from detectors}
-Details about using these functions are given in the \MCS\ User Manual.
+Details about using these functions are given in the \MCX\ User Manual.
 \begin{itemize}
 \item {\bf DETECTOR\_OUT\_0D}$(...)$. Used to output the results from a
   single detector. The name of the detector is output together
   with the simulated intensity and estimated statistical error. The
-  output is produced in a format that can be read by \MCS\ front-end
+  output is produced in a format that can be read by \MCX\ front-end
   programs.
 %See section~\ref{s:comp-finally} ??? for details.
 \item {\bf DETECTOR\_OUT\_1D}$(...)$. Used to output the results from a
@@ -244,21 +243,24 @@ Details about using these functions are given in the \MCS\ User Manual.
 \item {\bf inside\_rectangle}(\&$x$, \&$y$, $x$, $xw$, $yh$).
   Return 1 if $-xw/2 \leq x \leq xw/2$ AND $-yh/2 \leq y \leq yh/2$.
   Else return 0.
-\item {\bf box\_intersect}(\&$t_1$, \&$t_2$, $x$, $y$, $z$, $v_x$, $v_y$, $v_z$,
+\item {\bf box\_intersect}(\&$l_1$, \&$l_2$, $x$, $y$, $z$, $k_x$, $k_y$, $k_z$,
   $d_x$, $d_y$, $d_z$). Calculates the (0, 1, or 2) intersections between
-  the neutron path and a box of dimensions $d_x$, $d_y$, and $d_z$,
-  centered at the origin for a neutron with the parameters
-  $(x,y,z,v_x,v_y,v_z)$. The times of intersection are returned
-  in the variables $t_1$ and $t_2$, with $t_1 < t_2$. In the case
+  the x-ray path and a box of dimensions $d_x$, $d_y$, and $d_z$,
+  centered at the origin for a x-ray with the parameters
+  $(x,y,z,k_x,k_y,k_z)$. The intersection lengths are returned
+  in the variables $l_1$ and $l_2$, with $l_1 < l_2$. In the case
   of less than two intersections, $t_1$ (and possibly $t_2$) are set to
-  zero. The function returns true if the neutron intersects the box,
+  zero. The function returns true if the x-ray intersects the box,
   false otherwise.
-\item {\bf cylinder\_intersect}(\&$t_1$, \&$t_2$, $x$, $y$, $z$, $v_x$, $v_y$, $v_z$,
+\item {\bf cylinder\_intersect}(\&$l_1$, \&$l_2$, $x$, $y$, $z$, $k_x$, $k_y$, $k_z$,
   $r$, $h$).  Similar to {\bf box\_intersect}, but using a cylinder of height $h$ and radius $r$,
   centered at the origin.
-\item {\bf sphere\_intersect}(\&$t_1$, \&$t_2$, $x$, $y$, $z$, $v_x$, $v_y$, $v_z$,
+\item {\bf sphere\_intersect}(\&$l_1$, \&$l_2$, $x$, $y$, $z$, $k_x$, $k_y$, $k_z$,
   $r$). Similar to {\bf box\_intersect}, but using a sphere
   of radius $r$.
+\item {\bf ellipsoid\_intersect}(\&$l_1$, \&$l_2$, $x$, $y$, $z$, $k_x$, $k_y$, $k_z$,
+  $a$,$b$,$c$,$Q$, ). Similar to {\bf box\_intersect}, but using an ellipsoid with half-axis $a$,$b$,$c$ oriented by the rotation matrix $Q$.
+  If $Q=I$, $a$ is along the $x$-axis, $b $ along $y$ and $c$ along $z$
 \end{itemize}
 
 \subsection{Random numbers}
@@ -275,7 +277,7 @@ Details about using these functions are given in the \MCS\ User Manual.
   targeted at a \emph{disk} centered at (aim$_x$, aim$_y$, aim$_z$) with
   radius $r_f$ (in meters), and perpendicular to the \emph{aim} vector.. All directions
   that intersect the circle are chosen with equal probability. The solid
-  angle of the circle as seen from the position of the neutron is returned
+  angle of the circle as seen from the position of the x-ray is returned
   in $d\Omega$. This routine was previously called {\bf randvec\_target\_sphere}
   (which still works).
 \item {\bf randvec\_target\_rect\_angular}(\&$v_x$, \&$v_y$, \&$v_z$,
@@ -357,7 +359,7 @@ The number of blocks is put into $n$.
 \item {\bf Table\_Info\_Array}(\&$Table$) display information about all data blocks.
 \end{itemize}
 
-The format of text files is free. Lines starting by '\verb+# ; % /+' characters are considered to be comments, and stored in $Table.header$. Data blocks are vectors and matrices. Block numbers are counted starting from 1, and changing when a comment is found, or the column number changes. For instance, the file 'MCSTAS/data/BeO.trm' (Transmission of a Berylium filter) looks like:
+The format of text files is free. Lines starting by '\verb+# ; % /+' characters are considered to be comments, and stored in $Table.header$. Data blocks are vectors and matrices. Block numbers are counted starting from 1, and changing when a comment is found, or the column number changes. For instance, the file 'MCXTAS/data/BeO.trm' (Transmission of a Berylium filter) looks like:
 \begin{verbatim}
   # BeO transmission, as measured on IN12
   # Thickness: 0.05 [m]
@@ -372,8 +374,8 @@ Binary files should be of type "float" (i.e. REAL*32) and "double" (i.e. REAL*64
 and should \emph{not} contain text header lines. These files are platform
 dependent (little or big endian).
 
-The $filename$ is first searched into the current directory (and all user additional locations specified using the \verb+-I+ option, see the 'Running \MCS\ ' chapter in the User Manual), and if not found, in the \verb+data+ sub-directory of the \verb+MCSTAS+ library location. \index{Library!Components!data}
-\index{Environment variable!MCSTAS} This way, you do not need to have local copies of the \MCS\ Library Data files (see table~\ref{t:comp-data}).
+The $filename$ is first searched into the current directory (and all user additional locations specified using the \verb+-I+ option, see the 'Running \MCX\ ' chapter in the User Manual), and if not found, in the \verb+data+ sub-directory of the \verb+MCXTAS+ library location. \index{Library!Components!data}
+\index{Environment variable!MCXTAS} This way, you do not need to have local copies of the \MCX\ Library Data files (see table~\ref{t:comp-data}).
 
 A usage example for this library part may be:
 \begin{verbatim}
@@ -412,29 +414,29 @@ You may look into, for instance, the source files for
 {\bf Monochromator\_curved} or {\bf Virtual\_input}
 for other implementation examples.
 
-\section{Monitor\_nD Library}
-\index{Library!monitor\_nd-lib}
-
-This library gathers a few functions used by a set of monitors e.g. Monitor\_nD, Res\_monitor, Virtual\_output, etc.
-It may monitor any kind of data, create the data files, and may display many geometries (for \verb+mcdisplay+).
-Refer to these components for implementation examples, and ask the authors for more details.
-
-\section{Adaptive importance sampling Library}
-\index{Library!adapt\_tree-lib}
-
-This library is currently only used by the components {\bf Source\_adapt}
-and {\bf Adapt\_check}. It performs adaptive importance sampling of neutrons for simulation efficiency optimization.
-Refer to these components for implementation examples, and ask the authors for more details.
-
-\section{Vitess import/export Library}
-\index{Library!vitess-lib}
-
-This library is used by the components
-{\bf Vitess\_input} and {\bf Vitess\_output},
-as well as the \verb+mcstas2vitess+ utility.
-% (see section~\ref{s:mcstas2vitess}).
-\index{Tools!mcstas2vitess}
-Refer to these components for implementation examples, and ask the authors for more details.
+%\section{Monitor\_nD Library}
+%\index{Library!monitor\_nd-lib}
+%
+%This library gathers a few functions used by a set of monitors e.g. Monitor\_nD, Res\_monitor, Virtual\_output, etc.
+%It may monitor any kind of data, create the data files, and may display many geometries (for \verb+mcdisplay+).
+%Refer to these components for implementation examples, and ask the authors for more details.
+%
+%\section{Adaptive importance sampling Library}
+%\index{Library!adapt\_tree-lib}
+%
+%This library is currently only used by the components {\bf Source\_adapt}
+%and {\bf Adapt\_check}. It performs adaptive importance sampling of x-rays for simulation efficiency optimization.
+%Refer to these components for implementation examples, and ask the authors for more details.
+%
+%\section{Vitess import/export Library}
+%\index{Library!vitess-lib}
+%
+%This library is used by the components
+%{\bf Vitess\_input} and {\bf Vitess\_output},
+%as well as the \verb+mcstas2vitess+ utility.
+%% (see section~\ref{s:mcstas2vitess}).
+%\index{Tools!mcstas2vitess}
+%Refer to these components for implementation examples, and ask the authors for more details.
 
 \section{Constants for unit conversion etc.}
 The following predefined constants are useful for conversion
@@ -450,14 +452,14 @@ Name & Value & Conversion from & Conversion to \\ \hline
   & Minutes of arc & Radians \\
 \textvb{RAD2MIN} & $(360\cdot 60) / (2 \pi)$
   & Radians & Minutes of arc \\
-\textvb{V2K} & $10^{10} \cdot m_{\rm N}/\hbar$
-  & Velocity (m/s) & {\bf k}-vector (\AA$^{-1}$) \\
-\textvb{K2V} & $10^{-10} \cdot \hbar / m_{\rm N}$
-  & {\bf k}-vector (\AA$^{-1}$) & Velocity (m/s) \\
-\textvb{VS2E} & $m_{\rm N} / (2 e)$
-  & Velocity squared (m$^2$ s$^{-2}$) & Neutron energy (meV) \\
-\textvb{SE2V} & $\sqrt{2 e/m_{\rm N}}$
-  & Square root of neutron energy (meV$^{1/2}$) & Velocity (m/s) \\
+%\textvb{V2K} & $10^{10} \cdot m_{\rm N}/\hbar$
+%  & Velocity (m/s) & {\bf k}-vector (\AA$^{-1}$) \\
+%\textvb{K2V} & $10^{-10} \cdot \hbar / m_{\rm N}$
+%  & {\bf k}-vector (\AA$^{-1}$) & Velocity (m/s) \\
+%\textvb{VS2E} & $m_{\rm N} / (2 e)$
+%  & Velocity squared (m$^2$ s$^{-2}$) & Neutron energy (meV) \\
+%\textvb{SE2V} & $\sqrt{2 e/m_{\rm N}}$
+%  & Square root of neutron energy (meV$^{1/2}$) & Velocity (m/s) \\
 \textvb{FWHM2RMS} & $1/\sqrt{8\log(2)}$
   & Full width half maximum & Root mean square (standard deviation) \\
 \textvb{RMS2FWHM} & $\sqrt{8\log(2)}$
@@ -470,6 +472,11 @@ Name & Value & Conversion from & Conversion to \\ \hline
   & $\pi$ & \\
 \textvb{FLT\_MAX} & 3.40282347E+38F
   & a big float value & \\
+\textvb{CELE} & 1.602176487e-19 & Elementary charge (C) &\\
+\textvb{M\_C} & 299792458 & Speed of light in vacuum (m/s) &\\
+\textvb{E2K} & 0.506773091264796 & Wavenumber (1/AA) & Energy (keV)\\
+\textvb{K2E} & 1.97326972808327  & Energy (keV) & Wavenumber (1/AA)\\
+
 \hline
 \end{tabular}
 \end{center}
