MCS->MCX changes
git-svn-id: https://svn.mccode.org/svn/McStasTeX@295 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/branches/mcxtrace_1_0/Component_manual.tex
+++ b/branches/mcxtrace_1_0/Component_manual.tex
@@ -57,7 +57,7 @@
 \makeindex
 
 %\title{Component manual\\ to the neutron ray-tracing package
-% \MCS ,\\ version \version}
+% \MCX ,\\ version \version}
 %\author{Kim Lefmann, Peter Kj\ae r Willendrup, and Kristian Nielsen, \\
 % Materials Research Department, \\
 % Ris\o\ National Laboratory, 4000 Roskilde, Denmark;\\
@@ -161,12 +161,7 @@
 \include{misc}
 
 \appendix
-% \include{polarisation}
 \include{kernelcalls} % as in manual
-%\include{compcode}   % removed: too heavy !!
-%\include{instcode}
-%\include{test}       % contained instr_examples
-%\include{random}
 \include{terms}       % as in manual
 
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Bibliography}}
