bufix missing end{itemize}
git-svn-id: https://svn.mccode.org/svn/McStasTeX@298 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/branches/mcxtrace_1_0/changes.tex
+++ b/branches/mcxtrace_1_0/changes.tex
@@ -101,7 +101,7 @@ All sources include focussed sampling for optimized calculations
 %  \item When running parameter optimisations, a logfile (default name is "mcoptim\_XXXX.dat" where XXXX is a
 %     pseudo-random string) is created during the optimisation, updated at each optim step.
   \item We provide syntax-highlighting setup files for eamcs, vim and gedit editors.
-%\end{itemize}
+\end{itemize}
 \subsection{Platform support}
 \begin{itemize}
 \item Mac OS X 10.3 Panther (ppc), 10.4 Tiger (pcc/intel), 10.5 Leopard (ppc/intel)
