updated info for mcxtrcae
git-svn-id: https://svn.mccode.org/svn/McStasTeX@301 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/branches/mcxtrace_1_0/install.tex
+++ b/branches/mcxtrace_1_0/install.tex
@@ -1,11 +1,11 @@
 \chapter{Installing \MCX}
 \label{installing}
-\index{Environment variable!MCSTAS\_CC}
-\index{Environment variable!MCSTAS\_CFLAGS}
-\index{Environment variable!MCSTAS\_FORMAT}
+\index{Environment variable!MCXTAS\_CC}
+\index{Environment variable!MCXTAS\_CFLAGS}
+\index{Environment variable!MCXTAS\_FORMAT}
 \index{Testing the distribution}
 \index{Installing}
-The information in this chapter is also available as a separate
-html/ps/pdf document in the \texttt{install\_docs/} folder of your
-\MCX\ installation package.
-\input{../../McCode/trunk/doc/install_docs/tex/install_meat.tex}
+Up to date information on installation procedures on the various supported
+platforms are available under the ionstallation heading on the \MCX\ project
+webpage: http://www.mcxtrace.org
+
